--- a/EmployeeManagement/Content/Site.css
+++ b/EmployeeManagement/Content/Site.css
@@ -1,8 +1,11 @@
-﻿/* Set padding to keep content from hitting the edges */
+﻿@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Quicksand:wght@300..700&display=swap');
+
+/* Set padding to keep content from hitting the edges */
 .body-content {
     margin-top: 15px;
     padding-left: 15px;
     padding-right: 15px;
+    font-family: "Quicksand", sans-serif !important;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
